--- a/index.html
+++ b/index.html
@@ -173,7 +173,9 @@
         </li>
         <li><strong>Educación Superior:</strong>
             <ul class="clean-list">
+                <ul class="course-list">
                 <li>Actualmente cursando la carrera de <a href="https://ucsp.edu.pe/carreras/administracion-negocios/">Administración de Empresas</a></li>
+                </ul>
             </ul>
         </li>
     </ul>
