--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         /* General styling */
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: #F0FFF0;
+            background-color: #ccffee;
             margin: 0;
             padding: 0;
             color: #2F4F4F;
@@ -104,7 +104,7 @@
         }
         
         .dropdown-btn:hover {
-            background-color: #40E0D0;
+            background-color: #00e699;
         }
         
         /* Estilo para el contenido desplegable */
@@ -185,13 +185,13 @@
     <h2>UCSP</h2>
     <p><strong>Cursos que estoy llevando en el 5º semestre:</strong></p>
     <ul class="clean-list">
-        <li><strong>MÚSICA Y ARTES VISUALES</strong> - Docentes: <a href="https://www.linkedin.com/in/augusto-vera-bejar-23b85378/">Augusto Vera Bejar</a> y <a href="https://www.linkedin.com/in/maría-eugenia-cano-aguirre-42b94660/">Maria Eugenia Cano Aguirre</a></li>
-        <li><strong>ANÁLISIS, DISEÑO Y GESTIÓN DE PROCESOS</strong> - Docente: <a href="https://www.linkedin.com/in/alfredo-salinas-49a994151/">Alfredo Mauricio Salinas Salas</a></li>
-        <li><strong>DESARROLLO DE HABILIDADES DE NEGOCIACIÓN</strong> - Docente: <a href="https://www.linkedin.com/in/rmenchola/">Renzo Menchola Tenorio</a></li>
-        <li><strong>MICROECONOMÍA</strong> - Docente: <a href="https://www.linkedin.com/in/narda-cecilia-valderrama-pacheco-3213ab35/">Narda Cecilia Valderrama Pacheco</a></li>
-        <li><strong>MORAL</strong> - Docente: <a href="https://www.linkedin.com/in/joseph-zea-castillo-37065b264/">Joseph Efrain Zea Castillo</a></li>
-        <li><strong>PERSONA Y FAMILIA</strong> - Docente: <a href="https://www.linkedin.com/in/juan-ignacio-angulo-cuba-b1b46035/">Juan Ignacio Angulo Cuba</a></li>
-        <li><strong>ANÁLISIS DE DATOS</strong> - Docente: <a href="https://www.linkedin.com/in/ecuadrosv/">Ernesto Cuadros Vargas</a>
+        <li><strong>Música y Artes Visuales</strong> - Docentes: <a href="https://www.linkedin.com/in/augusto-vera-bejar-23b85378/">Augusto Vera Bejar</a> y <a href="https://www.linkedin.com/in/maría-eugenia-cano-aguirre-42b94660/">Maria Eugenia Cano Aguirre</a></li>
+        <li><strong>Análisis, Diseño Y Gestión de Procesos</strong> - Docente: <a href="https://www.linkedin.com/in/alfredo-salinas-49a994151/">Alfredo Mauricio Salinas Salas</a></li>
+        <li><strong>Desarrollo de Habilidades de Negociación</strong> - Docente: <a href="https://www.linkedin.com/in/rmenchola/">Renzo Menchola Tenorio</a></li>
+        <li><strong>Microeconomía</strong> - Docente: <a href="https://www.linkedin.com/in/narda-cecilia-valderrama-pacheco-3213ab35/">Narda Cecilia Valderrama Pacheco</a></li>
+        <li><strong>Moral</strong> - Docente: <a href="https://www.linkedin.com/in/joseph-zea-castillo-37065b264/">Joseph Efrain Zea Castillo</a></li>
+        <li><strong>Persona, Matrimonio y Familia</strong> - Docente: <a href="https://www.linkedin.com/in/juan-ignacio-angulo-cuba-b1b46035/">Juan Ignacio Angulo Cuba</a></li>
+        <li><strong>Análisis de Datos</strong> - Docente: <a href="https://www.linkedin.com/in/ecuadrosv/">Ernesto Cuadros Vargas</a>
             <ul class="course-list">
                 <!-- Botón desplegable para compañeros -->
                 <li>
@@ -200,7 +200,7 @@
                         <li><a href="https://salvaramen.github.io/">Maria Fernanda Apaza Meza</a></li>
                         <li><a href="https://samantaparedes.thsite.top/?i=1">Alvaro Apaza Luque</a></li>
                         <li><a href="https://valeriamayta.github.io/">Valeria Andrea Mayta Butilier</a></li>
-                        <li><a href="https://diegoantoniomontalvomamani.github.io/page/index.html">Diego Antonio Montalvo Mamani</a></li>
+                        <li><a href="https://diegoantoniomontalvomamani.github.io/page/index.html">Yessica Dayana Arias Mendoza</a></li>
                     </ul>
                 </li>
             </ul>
