--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         h1 {
             text-align: center;
             color: #008B8B;
-            background-color: #66CDAA;
+            background-color: #8bdac0;
             padding: 20px;
             border-radius: 10px;
             margin: 20px 0;
@@ -58,7 +58,7 @@
             width: 90%;
             padding: 20px;
             margin: 10px 0;
-            background: linear-gradient(135deg, #66CDAA, #66CDAA);
+            background: linear-gradient(135deg, #66CDAA, #8bdac0);
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             text-align: justify;
@@ -104,7 +104,7 @@
         }
         
         .dropdown-btn:hover {
-            background-color: #00e699;
+            background-color: #66CDAA;
         }
         
         /* Estilo para el contenido desplegable */
