--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             width: 90%;
             padding: 20px;
             margin: 10px 0;
-            background: linear-gradient(135deg, #66CDAA, #8bdac0);
+            background: linear-gradient(135deg, #c5ecdf, #8bdac0);
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             text-align: justify;
