--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
         /* Estilo para el botón desplegable */
         .dropdown-btn {
-            background-color: #00e699;
+            background-color: #78d3b5;
             color: rgb(77, 7, 73);
             padding: 10px 20px;
             border: none;
