--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
         }
 
         .dropdown-content li a:hover {
-            color: #b02772;
+            color: #008080;
         }
 
         /* Mostrar el contenido desplegable cuando el botón es clickeado */
