--- a/index.html
+++ b/index.html
@@ -199,7 +199,8 @@
                     <ul class="dropdown-content" id="dropdown-list">
                         <li><a href="https://mariafernandaapazameza.github.io/Maria-Fernanda-Apaza-Meza/">Maria Fernanda Apaza Meza</a></li>
                         <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/">Angueli Briyith Calderón Ccama</a></li>
-                        <li><a href="https://valeriamayta.github.io/">Valeria Andrea Mayta Butilier</a></li>
+                        <li><a href="https://alvaroenriqueapazaluque.github.io/AlvaroApazaLuque.github.io/"></a>Alvaro Enrique Apaza Luque</li>
+                        <li><a href="https://flabiatunquipa.github.io/mi-pagina-personal/">Flabia Stephanie Tunquipa Paripancca</a></li>
                         <li><a href="https://diegoantoniomontalvomamani.github.io/page/index.html">Yessica Dayana Arias Mendoza</a></li>
                     </ul>
                 </li>
