--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         /* General styling */
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Caprasimo',Gideon Roman;
             background-color: #ccffee;
             margin: 0;
             padding: 0;
