--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         /* General styling */
         body {
-            font-family: 'Caprasimo', Gideon Roman;
+            font-family: 'Gideon Roman', sans-serif;
             background-color: #ccffee;
             margin: 0;
             padding: 0;
@@ -19,6 +19,7 @@
         }
         
         h1 {
+            font-family: 'Caprasimo', cursive;
             text-align: center;
             color: #008B8B;
             background-color: #8bdac0;
@@ -27,6 +28,25 @@
             margin: 20px 0;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
             width: 90%;
+        }
+        nav {
+            background-color: #8bdac0;
+            width: 90%;
+            padding: 10px 20px;
+            border-radius: 0 0 10px 10px;
+            display: flex;
+            justify-content: flex-start;
+            gap: 20px;
+        }
+
+        nav a {
+            color: #004d4d;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            color: #008B8B;
         }
         
         a {
