--- a/index.html
+++ b/index.html
@@ -48,6 +48,19 @@
         nav a:hover {
             color: #008B8B;
         }
+        @media (max-width: 768px) {
+            nav {
+                flex-direction: column;
+                align-items: flex-start;
+            }
+        }
+
+        footer {
+            text-align: center;
+            padding: 20px;
+            font-size: 14px;
+            color: #444;
+        }
         
         a {
             text-decoration: none;
@@ -228,6 +241,16 @@
         </li>
     </ul>
 </div>
+<div class="content-box" id="contacto">
+    <h2>Contacto</h2>
+    <p>📧 Correo: <a href="mailto:thirza.cansaya@ucsp.edu.pe">thirza.cansaya@ucsp.edu.pe/a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/thirza-cansaya">linkedin.com/in/thirza-cansaya</a></p>
+    <p>📱 Celular: +51 999 888 777</p>
+</div>
+
+<footer>
+    © 2025 Thirza Cansaya Escobedo | Hecho con 💚 en Arequipa
+</footer>
 
 <script>
     // Función para alternar la visibilidad de la lista de compañeros
