--- a/index.html
+++ b/index.html
@@ -190,6 +190,12 @@
 <body>
 
 <h1>Thirza Alexka Cansaya Escobedo</h1>
+<nav>
+    <a href="#estudios">Estudios</a>
+    <a href="#ucsp">UCSP</a>
+    <a href="#companeros">Compañeros</a>
+    <a href="#contacto">Contacto</a>
+</nav>
 
 <div class="content-box">
     <h3>Hola, mi nombre es Thirza Alexka Cansaya Escobedo</h3>
