--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
             width: 90%;
         }
         nav {
+            position: sticky;
+            top: 0;
             background-color: #8bdac0;
             width: 90%;
             padding: 10px 20px;
@@ -40,6 +42,7 @@
         }
 
         nav a {
+            margin-righi: 20px;
             color: #004d4d;
             text-decoration: none;
             font-weight: bold;
@@ -202,7 +205,7 @@
     <p>Tengo 19 años y resido en el distrito de Socabaya, en la ciudad de Arequipa. En mi tiempo libre disfruto de dormir, escuchar música, dibujar, ver series, leer y salir con mis primos. Actualmente, estoy cursando la carrera de Administración de Negocios en la <a href="https://ucsp.edu.pe/">Universidad Católica San Pablo</a>.</p>
 </div>
 
-<div class="content-box">
+<div class="content-box" id="estudios">
     <h2>Estudios</h2>
     <ul>
         <li><strong>Educación Primaria y Secundaria:</strong>
@@ -220,7 +223,7 @@
     </ul>
 </div>
 
-<div class="content-box">
+<div class="content-box" id="UCSP">
     <h2>UCSP</h2>
     <p><strong>Cursos que estoy llevando en el 5º semestre:</strong></p>
     <ul class="clean-list">
