--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             <ul class="course-list">
                 <!-- Botón desplegable para compañeros -->
                 <li>
-                    <button class="dropdown-btn" onclick="toggleDropdown()">Compañeros</button>
+                    <button class="dropdown-btn" onclick="toggleDropdown()">Compañeros<id="compañeros"/button>
                     <ul class="dropdown-content" id="dropdown-list">
                         <li><a href="https://mariafernandaapazameza.github.io/Maria-Fernanda-Apaza-Meza/">Maria Fernanda Apaza Meza</a></li>
                         <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/">Angueli Briyith Calderón Ccama</ a></li>
@@ -252,8 +252,8 @@
 </div>
 <div class="content-box" id="contacto">
     <h2>Contacto</h2>
-    <p>📧 Correo: <a href="mailto:thirza.cansaya@ucsp.edu.pe">thirza.cansaya@ucsp.edu.pe/a></p>
-    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/thirza-cansaya">linkedin.com/in/thirza-cansaya</a></p>
+    <p>📧 Correo: <a href="mailto:thirza.cansaya@ucsp.edu.pe">thirza.cansaya@ucsp.edu.pe"</a></p>
+    <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/thirza-alexka-cansaya-escobedo-588112292">linkedin</a></p>
     <p>📱 Celular: +51 999 888 777</p>
 </div>
 
