--- a/index.html
+++ b/index.html
@@ -192,13 +192,15 @@
 </head>
 <body>
 
-<h1>Thirza Alexka Cansaya Escobedo</h1>
-<nav>
+<div class="header-container">
+  <h1>Thirza Alexka Cansaya Escobedo</h1>
+  <nav>
     <a href="#estudios">Estudios</a>
-    <a href="#ucsp">UCSP</a>
+    <a href="#UCSP">UCSP</a>
     <a href="#companeros">Compañeros</a>
     <a href="#contacto">Contacto</a>
-</nav>
+  </nav>
+</div>
 
 <div class="content-box">
     <h3>Hola, mi nombre es Thirza Alexka Cansaya Escobedo</h3>
