--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             flex-direction: column;
             align-items: center;
         }
-        header-container {
+        .header-container {
             width: 100%;
             background-color: #8bdac0;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
@@ -240,7 +240,7 @@
             <ul class="course-list">
                 <!-- Botón desplegable para compañeros -->
                 <li>
-                    <button class="dropdown-btn" onclick="toggleDropdown()">Compañeros<id="compañeros"/button>
+                    <button class="dropdown-btn" onclick="toggleDropdown()" id="Compañeros">Compañeros</button>
                     <ul class="dropdown-content" id="dropdown-list">
                         <li><a href="https://mariafernandaapazameza.github.io/Maria-Fernanda-Apaza-Meza/">Maria Fernanda Apaza Meza</a></li>
                         <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/">Angueli Briyith Calderón Ccama</ a></li>
@@ -255,7 +255,7 @@
 </div>
 <div class="content-box" id="contacto">
     <h2>Contacto</h2>
-    <p>📧 Correo: <a href="mailto:thirza.cansaya@ucsp.edu.pe">thirza.cansaya@ucsp.edu.pe"</a></p>
+    <p>📧 Correo: <a href="mailto:thirza.cansaya@ucsp.edu.pe">thirza.cansaya@ucsp.edu.pe</a></p>
     <p>🔗 LinkedIn: <a href="https://www.linkedin.com/in/thirza-alexka-cansaya-escobedo-588112292">linkedin</a></p>
     <p>📱 Celular: +51 999 888 777</p>
 </div>
