--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
             <ul class="course-list">
                 <!-- Botón desplegable para compañeros -->
                 <li>
-                    <button class="dropdown-btn" onclick="toggleDropdown()" id="Compañeros">Compañeros</button>
+                    <button class="dropdown-btn" onclick="toggleDropdown()" id="compañeros">Compañeros</button>
                     <ul class="dropdown-content" id="dropdown-list">
                         <li><a href="https://mariafernandaapazameza.github.io/Maria-Fernanda-Apaza-Meza/">Maria Fernanda Apaza Meza</a></li>
                         <li><a href="https://angueli08.github.io/Angueli-Briyith-Calderon-Ccama/">Angueli Briyith Calderón Ccama</ a></li>
