--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             text-align: center;
             color: #008B8B;
             background-color: #8bdac0;
-            padding: 20px 40px
+            padding: 20px;
             border-radius: 10px;
             margin: 20px 0;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
