--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         }
         html {
         scroll-behavior: smooth;
-        scroll-padding-top: 100px; /* Ajusta el número según la altura de tu header */
+        scroll-padding-top: 130px; /* Ajusta el número según la altura de tu header */
              }
 
     </style>
@@ -202,7 +202,7 @@
 <div class="header-container">
   <h1>Thirza Alexka Cansaya Escobedo</h1>
   <nav>
-    <a href="#sobremi">Sobre Mi</a> 
+    <a href="#sobre mi">Sobre Mí</a> 
     <a href="#estudios">Estudios</a>
     <a href="#UCSP">UCSP</a>
     <a href="#contacto">Contacto</a>
