--- a/index.html
+++ b/index.html
@@ -1,10 +1,23 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="Thirza Alexka Cansaya Escobedo">
     <title>Thirza Alexka Cansaya Escobedo</title>
+    <meta name="description" content="Página personal de Thirza Alexka Cansaya Escobedo, estudiante de Administración de Negocios en la UCSP.">
+    <meta name="keywords" content="Thirza, Cansaya, UCSP, Arequipa, Administración, estudiante, Perú">
+    <meta name="author" content="Thirza Alexka Cansaya Escobedo">
+
+    <!-- ✅ Open Graph (Facebook, WhatsApp, etc.) -->
+    <meta property="og:title" content="Thirza Alexka Cansaya Escobedo">
+    <meta property="og:description" content="Conoce a Thirza, estudiante de Administración en la UCSP. Descubre sus estudios, cursos y más.">
+    <meta property="og:url" content="https://thirzaalexkacansayaescobedo.github.io/ThirzaCansaya/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="Thirza Alexka Cansaya Escobedo">
+    <meta name="twitter:description" content="Conoce a Thirza, estudiante de Administración en la UCSP. Descubre sus cursos y más.">
+    <link rel="icon" href="favicon.ico">
     <style>
         /* General styling */
         body {
