--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thirza Alexka Cansaya Escobedo</title>
@@ -39,7 +38,6 @@
             z-index: 999;
         }
 
-        
         h1 {
             font-family: 'Caprasimo', cursive;
             text-align: center;
@@ -70,6 +68,17 @@
             nav {
                 flex-direction: column;
                 align-items: flex-start;
+            }
+
+            h1 {
+                font-size: 26px;
+                padding: 15px;
+                margin: 10px 0;
+            }
+
+            .content-box {
+                width: 95%;
+                padding: 15px;
             }
         }
 
@@ -206,7 +215,7 @@
         html {
         scroll-behavior: smooth;
         scroll-padding-top: 150px; /* Ajusta el número según la altura de tu header */
-             }
+        }
 
     </style>
 </head>
