--- a/index.html
+++ b/index.html
@@ -51,24 +51,30 @@
             font-size: 36px;
         }
         nav {
-           display: flex;
-           justify-content: flex-start;
-           gap: 20px;
-           padding: 10px 20px;
-           background-color: #8bdac0;
-       }
+            display: flex;
+           flex-wrap: nowrap;
+            justify-content: flex-start;
+            gap: 20px;
+            padding: 10px 20px;
+            background-color: #8bdac0;
+            overflow-x: auto;
+            white-space: nowrap;
+            -webkit-overflow-scrolling: touch;
+        }
 
-       nav a {
-           margin-right: 20px;
-           color: #004d4d;
-           text-decoration: none;
-           font-weight: bold;
-       }
-        @media (max-width: 768px) {
-            nav {
-                flex-direction: column;
-                align-items: flex-start;
-            }
+        nav a {
+            flex: 0 0 auto; /* evita que se compriman */
+            color: #004d4d;
+            text-decoration: none;
+            font-weight: bold;
+            padding: 10px 10px;
+        }
+
+       @media (max-width: 768px) {
+       nav {
+       justify-content: flex-start;
+           }
+        }
 
             h1 {
                 font-size: 26px;
