--- a/index.html
+++ b/index.html
@@ -71,11 +71,17 @@
         }
 
        @media (max-width: 768px) {
-       nav {
-       justify-content: flex-start;
-           }
+        nav {
+            flex-direction: row;
+            justify-content: center;
+            flex-wrap: wrap;
         }
 
+        nav a {
+             padding: 10px;
+        }
+     ]
+           
             h1 {
                 font-size: 26px;
                 padding: 15px;
